<resources>
    <string name="app_name">Notepad</string>
    <string name="Tamam">OK</string>
    <string name="string_todo">To Do List</string>
    <string name="logo_description">Logo</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="string_notes">Notes</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="editHint">To do…</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="haveNotAccount">Don\'\t have an account?</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="save_task">Save Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>