<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRegisterField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:hint="@string/usernameHint"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="@+id/imageRegisterLogo"
        app:layout_constraintStart_toStartOf="@+id/imageRegisterLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageRegisterLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRegisterPasswordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/passwordHint"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/etRegisterField"
        app:layout_constraintStart_toStartOf="@+id/etRegisterField"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageRegisterLogo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/spiderman"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/register_text"
        app:layout_constraintStart_toStartOf="@+id/register_text"
        app:layout_constraintTop_toBottomOf="@+id/register_text" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/etRegisterPasswordField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etRegisterPasswordField"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPasswordField" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>
