<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".Activities.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLoginField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:hint="Username"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:hint="Password"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/etLoginField"
        app:layout_constraintStart_toStartOf="@+id/etLoginField"
        app:layout_constraintTop_toBottomOf="@+id/etLoginField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/login_logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordField"
        app:layout_constraintStart_toStartOf="@+id/etPasswordField"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordField" />

    <Button
        android:id="@+id/btnLgnRgstr"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>





</androidx.constraintlayout.widget.ConstraintLayout>
